[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menus/OptionsMenu/OptionsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menus/GlobalMenu/GlobalMenuScript.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/MainMenu/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menus/PlayerMenu/PlayerMenu.tscn" type="PackedScene" id=4]

[node name="Menus" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

[node name="PlayerMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="LoadingScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -50.0
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
